--- a/fallow_fields.Rmd
+++ b/fallow_fields.Rmd
@@ -7,7 +7,10 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(raster)
+library(sf)
 library(tidyverse)
+library(janitor)
 ```
 
 ```{r}
@@ -50,6 +53,40 @@ all_fields_binded <- do.call(rbind, fields_cleaned_list) %>%
 ```
 
 ```{r}
-#read in 
+#read in kern county shapefile for clipping
+kern_county <- read_sf("data/Kern_County_Boundary/Kern_County_Boundary.shp")
+```
+
+```{r}
+#read in FAM data
+
+#gather file data
+my_files <- list.files("data/FAM_TIF", full.names = TRUE)
+
+#this reads in the data as a raster stack
+FAM_raster_stack <- raster::stack(my_files)
+
+#save crs of FAM rasters
+FAM_raster_stack_crs <- crs(FAM_raster_stack)
+
+FAM_raster_stack_crs
+
+#transform kern county SF object to be same as FAM rasters
+kern_county_transformed <- kern_county %>% 
+  st_transform(crs = FAM_raster_stack_crs)
+
+st_crs(kern_county_transformed)
+
+#reproject FAM raster
+reproj_FAM <- projectRaster(FAM_raster_stack, crs = "+proj=aea +lat_1=29.5 +lat_2=45.5 +lat_0=23 +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs")
+
+#crop and mask
+FAM_raster_crop <- crop(FAM_raster_stack, extent(kern_county_transformed))
+FAM_raster_mask <- mask(FAM_raster_crop, kern_county_transformed)
+
+plot(FAM_raster_mask)
+
+#polygonize masked FAM rasters
+polylist = lapply(as.list(FAM_raster_mask), rasterToPolygons)
 ```
 
